--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -1,10 +1,6 @@
-@select-color: #00d1b2;	// 站点主体颜色
-@unselect-color: #5c6b77;	// 站点主体颜色
-@hover-color: #00d1b2;
+@import '~iview/src/styles/index.less';
+@primary-color: #00d1b2;
+@inline-color: #dddee1;	// 下划线
+
 @unhover-color: #5c6b77;
 @font-color: #5c6b77;
-
-@green: #00d1b2;
-
-@input-unselect-color: #dddee1;	// 输入框，未选中颜色
-@select-selected-color: #00d1b2;	// 下拉框，选中颜色
