增加菜单管理

--- a/src/assets/css/default.less
+++ b/src/assets/css/default.less
@@ -184,6 +184,13 @@ html,body {
 	}
 }
 
+// 表格扩展
+td.ivu-table-expanded-cell {
+	padding: 0;
+	// background: #fff !important;
+	// background-color: #fff !important;
+}
+
 // 富文本插入url
 .ql-tooltip {
 	margin-left: 180px;
